Fix discount not showing up on right-side checkout box

--- a/cart/styles.css
+++ b/cart/styles.css
@@ -1,3 +1,7 @@
 nav {
   background-color: var(--mdb-blue);
 }
+
+#discount {
+  color: red;
+}
